--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "emoji-picker-react": "^4.14.2",
     "material-icons": "^1.13.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
